# ARC_Spec_Python

./: API_USAGE.md  README.md  TROUBLESHOOTING.md  core.py  pyproject.toml
Tools/: OpenAI.py
arcspec_ai/: __init__.py  cli.py
arcspec_ai/config/: __init__.py  parser_factory.py
arcspec_ai/configurator/: __init__.py
arcspec_ai/configurator/aiconfig/: __init__.py  loader.py
arcspec_ai/configurator/parser/: __init__.py  manager.py
arcspec_ai/parsers/: __init__.py  base.py  mycostom.py  openai.py  registry.py
arcspec_ai/ui/: __init__.py  chat_interface.py  terminal_ui.py
arcspec_ai/utils/: __init__.py  config_loader.py  history_manager.py
cli/: __init__.py  main.py
configs/: Example.ai.json  mycostom.ai.json
examples/: README.md  __init__.py  async_chat_bot.py  basic_integration.py  batch_processing.py  cli_tool_integration.py  desktop_gui_app.py  flask_web_app.py
parsers/: base.py
